--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="bike_sharing">Bike Sharing</string>
     <string name="click_here_to_generate_qr_code">CLICK HERE TO generate qr code</string>
     <string name="enter_text_here">Enter Text Here</string>
+    <string name="user">User</string>
+    <string name="administration">Administration</string>
+    <string name="rechercher">Rechercher</string>
+    <string name="statistiques">Statistiques</string>
+    <string name="utilisateurs">Utilisateurs</string>
 </resources>
