--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="rechercher">Rechercher</string>
     <string name="statistiques">Statistiques</string>
     <string name="utilisateurs">Utilisateurs</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_logout">Logout</string>
 </resources>
