--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,7 +12,7 @@
     <string name="edit">Edit</string>
     <string name="adresse_exacte">Exact address</string>
     <string name="bike_sharing">Bike Sharing</string>
-    <string name="click_here_to_generate_qr_code">CLICK HERE TO generate qr code</string>
+    <string name="click_here_to_generate_qr_code">Click here to generate qr code</string>
     <string name="enter_text_here">Enter Text Here</string>
     <string name="ici_le_nom_du_lieu">Here the text of the spinner</string>
     <string name="ici_c_est_le_texte_du_spinner">" Here the text of the spinner"</string>
@@ -38,4 +38,17 @@
     <string name="english">ENGLISH</string>
     <string name="german">GERMAN</string>
     <string name="francais">FRENCH</string>
+    <string name="Profile">Profile</string>
+    <string name="AddPlace">Add a place</string>
+    <string name="EditPlace">Edit a place</string>
+    <string name="InfoPlace">Information</string>
+    <string name="Language">Choose a language</string>
+    <string name="nom">Firstname</string>
+    <string name="pr_nom">Lastname</string>
+    <string name="type_d_utilisateur">Type of user</string>
+    <string name="mail_ici">The e-mail address here</string>
+    <string name="le_canton_ici">The canton here</string>
+    <string name="le_nom_ici">The firstname here</string>
+    <string name="le_pr_nom_ici">The lastname here</string>
+    <string name="le_type_de_user_ici">The type of user here</string>
 </resources>
