--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,7 +38,7 @@
     <string name="francais">FRANCAIS</string>
     <string name="english">ANGLAIS</string>
     <string name="german">ALLEMAND</string>
-    <string name="Profile">Profile</string>
+    <string name="Profile">Profil</string>
     <string name="pr_nom">Prénom</string>
     <string name="le_pr_nom_ici">Le prénom ici</string>
     <string name="nom">Nom</string>
@@ -51,4 +51,6 @@
     <string name="EditPlace">Modifier un lieu</string>
     <string name="InfoPlace">Informations</string>
     <string name="Language">Choisir une langue</string>
+    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
+    <string name="icone_de_l_application">Icône de l\'application</string>
 </resources>
