--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
     <string name="app_name">Bike Sharing</string>
-    <string name="string_button" />
     <string name="cantons">Cantons</string>
     <string name="places">Places</string>
     <string name="villes">Villes</string>
     <string name="authors">Created by Daniel De Girolamo &#38; Pedro Gil Ferreira</string>
-    <string name="imgLauncherDescription">icon launcher</string>
     <string name="search">Rechercher</string>
     <string name="bike_sharing">Bike Sharing</string>
     <string name="click_here_to_generate_qr_code">CLICK HERE TO generate qr code</string>
@@ -39,17 +37,19 @@
     <string name="english">ENGLISH</string>
     <string name="francais">FRANCAIS</string>
     <string name="german">GERMAN</string>
-    <string name="Profile">Profile</string>
+    <string name="Profile">Profil</string>
     <string name="AddPlace">Add a place</string>
     <string name="EditPlace">Edit a place</string>
     <string name="InfoPlace">Information</string>
     <string name="Language">Choose a language</string>
     <string name="pr_nom">Prénom</string>
     <string name="le_pr_nom_ici">Le prénom ici</string>
-    <string name="nom">nom</string>
+    <string name="nom">Nom</string>
     <string name="le_nom_ici">Le nom ici</string>
     <string name="mail_ici">L\'adresse e-mail ici</string>
     <string name="le_canton_ici">Le canton ici</string>
     <string name="type_d_utilisateur">Type d\'utilisateur</string>
     <string name="le_type_de_user_ici">Le type de user ici</string>
+    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
+    <string name="icone_de_l_application">icone de l\'application</string>
 </resources>
